:lipstick: [#1451] Fixed header z-index

--- a/src/open_inwoner/scss/components/Header/Header.scss
+++ b/src/open_inwoner/scss/components/Header/Header.scss
@@ -9,6 +9,7 @@ $vm: var(--spacing-large);
   min-height: 100px;
   background-color: var(--color-white);
   width: 100%;
+  z-index: 1003;
 
   @media (min-width: 768px) {
     position: relative;
